--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
   <div id="aquaddis-section" class="brand-section">
     <div class="brand-header">Aquaddis</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/Pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Aquaddis', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -224,9 +224,9 @@
 
   <div id="best-section" class="brand-section">
     <div class="brand-header">Best Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -241,9 +241,9 @@
 
   <div id="top-section" class="brand-section">
     <div class="brand-header">Top Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Top Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Top Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Top Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Top Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Top Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Top Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -258,9 +258,9 @@
 
   <div id="daily-section" class="brand-section">
     <div class="brand-header">Daily Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -275,9 +275,9 @@
 
   <div id="fine-section" class="brand-section">
     <div class="brand-header">Fine Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -292,9 +292,9 @@
 
   <div id="gold-section" class="brand-section">
     <div class="brand-header">Gold Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Gold Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -309,9 +309,9 @@
 
   <div id="one-section" class="brand-section">
     <div class="brand-header">One Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('One Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -326,9 +326,9 @@
 
   <div id="africa-section" class="brand-section">
     <div class="brand-header">Africa Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Africa Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -343,9 +343,9 @@
 
   <div id="yes-section" class="brand-section">
     <div class="brand-header">Yes Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Yes Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -360,9 +360,9 @@
 
   <div id="dega-section" class="brand-section">
     <div class="brand-header">Dega Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Dega Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -377,9 +377,9 @@
 
   <div id="fham-section" class="brand-section">
     <div class="brand-header">Fham Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Fham Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
@@ -394,9 +394,9 @@
 
   <div id="arki-section" class="brand-section">
     <div class="brand-header">Arki Water</div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
-    <div class="variant"><div class="variant-info"><div class="variant-size">2 L</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button></div>
+    <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button></div>
 
     <div class="nutrition">
       <h3>Nutrition Facts (per liter)</h3>
