--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </header>
 
   <div class="search-bar">
-    <input type="text" placeholder="Search water brands..." disabled>
+    <input type="text" placeholder="Search By price or brand..." disabled>
   </div>
 
   <div class="categories">
@@ -223,7 +223,7 @@
   </div>
 
   <div id="best-section" class="brand-section">
-    <div class="brand-header">Sport Water</div>
+    <div class="brand-header">Forest Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Best Water', '2L', 160)">+</button></div>
@@ -257,7 +257,7 @@
   </div>
 
   <div id="daily-section" class="brand-section">
-    <div class="brand-header">Daily Water</div>
+    <div class="brand-header">Kiya Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Daily Water', '2L', 160)">+</button></div>
@@ -274,7 +274,7 @@
   </div>
 
   <div id="fine-section" class="brand-section">
-    <div class="brand-header">Fine Water</div>
+    <div class="brand-header">Sport Water</div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.3 L/pack</div><div class="variant-price">140 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '0.3L', 140)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">0.6 L/pack</div><div class="variant-price">150 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '0.6L', 150)">+</button></div>
     <div class="variant"><div class="variant-info"><div class="variant-size">2 L/pack</div><div class="variant-price">160 Birr</div></div><button class="add-btn" onclick="addToCart('Fine Water', '2L', 160)">+</button></div>
