--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
 </head>
 <body>
   <header>
-    <h1>ET Water Market</h1>
+    <h1>ET Water Market Agent
+    </h1>
   </header>
 
   <div class="search-bar">
@@ -576,7 +577,8 @@
   </script>
 
   <div style="text-align:center; padding:20px 16px; color:#555; font-size:14px; background:#f8f8f8; border-top:1px solid #ddd;">
-    Contact us for your request<br>
+    Contact us for your request
+      More than 350 Agents<br>
     <strong style="color:#0066FF; font-size:16px;">0984748168</strong>
   </div>
 
