--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 </head>
 <body>
   <header>
-    <h1>ET Water Market Agent
+    <h1>ET Water shop(+350 Agents)
     </h1>
   </header>
 
@@ -577,9 +577,9 @@
   </script>
 
   <div style="text-align:center; padding:20px 16px; color:#555; font-size:14px; background:#f8f8f8; border-top:1px solid #ddd;">
-    Contact us for your request
-      More than 350 Agents<br>
-    <strong style="color:#0066FF; font-size:16px;">0984748168</strong>
+    Contact us for your request<br>
+    <strong style="color:#0066FF; font-size:16px;">0984748168 </strong>
+    <strong style="color:#0066FF; font-size:16px;">More than 350 Agents </strong>
   </div>
 
 </body>
